--- a/Cropper.Plugins/Cropper.SendToS3/Cropper.SendToS3.csproj
+++ b/Cropper.Plugins/Cropper.SendToS3/Cropper.SendToS3.csproj
@@ -38,26 +38,79 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.EnterpriseServices" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="S3\Bucket.cs" />
-    <Compile Include="S3\CommonPrefixEntry.cs" />
-    <Compile Include="S3\FileUploadCompleteEvent.cs" />
-    <Compile Include="S3\GetResponse.cs" />
-    <Compile Include="S3\ListAllMyBucketsResponse.cs" />
-    <Compile Include="S3\ListBucketResponse.cs" />
-    <Compile Include="S3\ListEntry.cs" />
-    <Compile Include="S3\Owner.cs" />
-    <Compile Include="S3\PutDataEventHandler.cs" />
-    <Compile Include="S3\Response.cs" />
-    <Compile Include="S3\S3.cs" />
-    <Compile Include="S3\S3Formatter.cs" />
-    <Compile Include="S3\S3Object.cs" />
-    <Compile Include="S3\Utils.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="Web References\com.amazonaws.s3\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.map</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <WebReferences Include="Web References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WebReferenceUrl Include="http://s3.amazonaws.com/doc/2006-03-01/AmazonS3.wsdl">
+      <UrlBehavior>Dynamic</UrlBehavior>
+      <RelPath>Web References\com.amazonaws.s3\</RelPath>
+      <UpdateFromURL>http://s3.amazonaws.com/doc/2006-03-01/AmazonS3.wsdl</UpdateFromURL>
+      <ServiceLocationURL>
+      </ServiceLocationURL>
+      <CachedDynamicPropName>
+      </CachedDynamicPropName>
+      <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
+      <CachedSettingsPropName>Cropper_SendToS3_com_amazonaws_s3_AmazonS3</CachedSettingsPropName>
+    </WebReferenceUrl>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="Web References\com.amazonaws.s3\AccessControlPolicy.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.amazonaws.s3\AmazonS3.wsdl" />
+    <None Include="Web References\com.amazonaws.s3\AmazonS3.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Web References\com.amazonaws.s3\BucketLoggingStatus.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.amazonaws.s3\CreateBucketResult.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.amazonaws.s3\GetObjectResult.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.amazonaws.s3\ListAllMyBucketsResult.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.amazonaws.s3\ListBucketResult.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.amazonaws.s3\PutObjectResult.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.amazonaws.s3\Reference.map">
+      <Generator>MSDiscoCodeGenerator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Web References\com.amazonaws.s3\Status.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
