--- a/Cropper.Plugins/Cropper.AnimatedGif/Plugin/Cropper.AnimatedGif.csproj
+++ b/Cropper.Plugins/Cropper.AnimatedGif/Plugin/Cropper.AnimatedGif.csproj
@@ -100,12 +100,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\SolutionInfo.cs">
+      <Link>SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="AnimatedGifFormat.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="AssemblyInfo.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="AssemblyInfo.cs" />
     <Compile Include="Library\AnimatedGifEncoder.cs" />
     <Compile Include="Library\GifDecoder.cs" />
     <Compile Include="Library\LZWEncoder.cs" />
