--- a/Cropper.Plugins/Cropper.CountdownPng/Cropper.CountdownPng.csproj
+++ b/Cropper.Plugins/Cropper.CountdownPng/Cropper.CountdownPng.csproj
@@ -100,6 +100,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
