Set all Release Build Configurations to x86 explicitly to alleviate potential bugs when running in a 64-bit environment.  Finished added global versioning.

--- a/Cropper.Plugins/Cropper.AviFormat/Cropper.AviFormat.csproj
+++ b/Cropper.Plugins/Cropper.AviFormat/Cropper.AviFormat.csproj
@@ -76,6 +76,7 @@
     <WarningLevel>4</WarningLevel>
     <DebugType>none</DebugType>
     <ErrorReport>prompt</ErrorReport>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'AutomatedDebug|AnyCPU' ">
     <OutputPath>..\..\build\debug\plugins\</OutputPath>
