--- a/Cropper.Plugins/Cropper.AnimatedGif/Plugin/Cropper.AnimatedGif.csproj
+++ b/Cropper.Plugins/Cropper.AnimatedGif/Plugin/Cropper.AnimatedGif.csproj
@@ -76,6 +76,7 @@
     <WarningLevel>4</WarningLevel>
     <DebugType>none</DebugType>
     <ErrorReport>prompt</ErrorReport>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Cropper.Extensibility, Version=1.8.1.75, Culture=neutral, processorArchitecture=MSIL">
