--- a/Cropper.Plugins/Paint.NET/PaintDotNet.csproj
+++ b/Cropper.Plugins/Paint.NET/PaintDotNet.csproj
@@ -4,11 +4,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{0C9F6C4A-0D51-4A74-91F0-363B55FA47C5}</ProjectGuid>
+    <ProjectGuid>{B60EEA44-A7D4-4527-B9DC-DB4072B9A527}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Cropper.SendToImgurl</RootNamespace>
-    <AssemblyName>Cropper.SendToImgurl</AssemblyName>
+    <RootNamespace>Cropper.SendToPaintDotNet</RootNamespace>
+    <AssemblyName>Cropper.SendToPaintDotNet</AssemblyName>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
@@ -71,10 +71,9 @@
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Imgur.cs">
-      <SubType>Component</SubType>
+    <Compile Include="PaintDotNet.cs">
     </Compile>
-    <Compile Include="ImgurLogWriter.cs" />
+    <Compile Include="PdnLogWriter.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
