--- a/Cropper.Plugins/AviFormat/AviFormat.csproj
+++ b/Cropper.Plugins/AviFormat/AviFormat.csproj
@@ -78,7 +78,7 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <OutputPath>..\Output\Release</OutputPath>
+    <OutputPath>..\Output\x86\Release</OutputPath>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
     <DefineConstants>TRACE</DefineConstants>
     <DebugSymbols>false</DebugSymbols>
