--- a/Cropper.Plugins/Paint.NET/PaintDotNet.csproj
+++ b/Cropper.Plugins/Paint.NET/PaintDotNet.csproj
@@ -67,7 +67,7 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <DebugType>pdbonly</DebugType>
+    <DebugType>none</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\Output\x86\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
