--- a/Cropper.Plugins/Email/Email.csproj
+++ b/Cropper.Plugins/Email/Email.csproj
@@ -1,4 +1,4 @@
-﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
     <ProductVersion>8.0.50727</ProductVersion>
@@ -18,7 +18,7 @@
     <DefaultTargetSchema>IE50</DefaultTargetSchema>
     <DelaySign>false</DelaySign>
     <OutputType>Library</OutputType>
-    <RootNamespace>Fusion8.Cropper</RootNamespace>
+    <RootNamespace>Cropper.Email</RootNamespace>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
     <StartupObject>
     </StartupObject>
@@ -98,8 +98,8 @@
     <Reference Include="System">
       <Name>System</Name>
     </Reference>
-    <Reference Include="System.Data">
-      <Name>System.Data</Name>
+    <Reference Include="System.Core">
+      <Name>System.Core</Name>
     </Reference>
     <Reference Include="System.Drawing">
       <Name>System.Drawing</Name>
@@ -118,24 +118,26 @@
     <Compile Include="AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="EmailOutputFormat.cs" />
-    <Compile Include="EmailOutputSettings.cs" />
+    <Compile Include="EmailSettings.cs" />
     <Compile Include="MAPI.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Options.cs">
+    <Compile Include="EmailOptionsForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Options.Designer.cs">
+    <Compile Include="EmailOptionsForm.Designer.cs">
       <DependentUpon>Options.cs</DependentUpon>
     </Compile>
     <Compile Include="SendToEmailFormat.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="..\Utils\Tracing.cs">
+      <Link>Tracing.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Options.resx">
-      <DependentUpon>Options.cs</DependentUpon>
+    <EmbeddedResource Include="EmailOptionsForm.resx">
+      <DependentUpon>EmailOptionsForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
