--- a/Cropper.Plugins/Imgur/Imgur.csproj
+++ b/Cropper.Plugins/Imgur/Imgur.csproj
@@ -81,23 +81,38 @@
       <HintPath>..\Dependencies\Cropper.Extensibility.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.XML" />
+    <Reference Include="Microsoft.Http"/>
+    <Reference Include="Microsoft.Http.Extensions"/>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\SolutionInfo.cs">
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Imgur.cs">
+    <Compile Include="Plugin.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="ImgurLogWriter.cs" />
     <Compile Include="..\Utils\Tracing.cs">
       <Link>Tracing.cs</Link>
     </Compile>
+    <Compile Include="ImgurOptionsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ImgurOptionsForm.Designer.cs">
+      <DependentUpon>ImgurOptionsForm.cs</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="ImgurOptionsForm.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>ImgurOptionsForm.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
