--- a/Cropper.Plugins/TFSWorkItem/TFSWorkItem.csproj
+++ b/Cropper.Plugins/TFSWorkItem/TFSWorkItem.csproj
@@ -183,6 +183,9 @@
     <Content Include="ReadMe-TFS.htm">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="..\ReadMe.htm">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
