--- a/Cropper.Plugins/Flickr/Flickr.csproj
+++ b/Cropper.Plugins/Flickr/Flickr.csproj
@@ -1,4 +1,4 @@
-﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -74,13 +74,40 @@
     <Compile Include="AuthorizeDialog.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Flickr.cs" />
+    <Compile Include="Plugin.cs" />
     <Compile Include="PhotoDetails.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FlickrOptionsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FlickrOptionsForm.Designer.cs">
+      <DependentUpon>FlickrOptionsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="PhotoSetItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Settings.cs" />
+    <Compile Include="..\Utils\Tracing.cs">
+      <Link>Tracing.cs</Link>
+    </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="FlickrOptionsForm.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>FlickrOptionsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <SubType>Designer</SubType>
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Refresh.png" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
