--- a/Cropper.Plugins/TwitPic/makefile.flymake
+++ b/Cropper.Plugins/TwitPic/makefile.flymake
@@ -2,14 +2,14 @@
 _CSC=c:\.net3.5\csc.exe
 LIBSREF=/R:..\Dependencies\Cropper.Extensibility.dll
 
-CS_SOURCE=Plugin.cs TwitPicOptionsForm.Designer.cs TwitPicOptionsForm.cs Properties\AssemblyInfo.cs ..\SolutionInfo.cs ..\Utils\Tracing.cs
+CS_SOURCE=Plugin.cs TwitPicSettings.cs OAuth.cs TwitPicOptionsForm.Designer.cs TwitPicOptionsForm.cs Properties\AssemblyInfo.cs ..\SolutionInfo.cs ..\Utils\Tracing.cs
 
 
-check-syntax :
+check-syntax:
         <<flymake-build.cmd  $(CS_SOURCE)
     SETLOCAL ENABLEDELAYEDEXPANSION
-    set errorlevel=
-    for %%I in (%*) do if NOT %%I == $(FLYMAKE_ORIGINAL) (
+    set errorlevel=0
+    for %%I in (%*) do if NOT x%%I == x$(FLYMAKE_ORIGINAL) (
        set filesToBuild=!filesToBuild! %%I
     )
     $(_CSC) /t:module $(LIBSREF) $(FLYMAKE_CHECK) !filesToBuild!
