--- a/Cropper.Plugins/Paint.NET/PaintDotNet.csproj
+++ b/Cropper.Plugins/Paint.NET/PaintDotNet.csproj
@@ -81,10 +81,16 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Dependencies\Cropper.Extensibility.dll</HintPath>
     </Reference>
+    <Reference Include="Cropper.Core">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Dependencies\Cropper.Core.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Web" />
+    <Reference Include="System.Core" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="UIAutomationClient" />
+    <Reference Include="UIAutomationTypes" />
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
@@ -94,6 +100,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PaintDotNet.cs">
     </Compile>
+    <Compile Include="PdnOptionsForm.cs"/>
     <Compile Include="PdnLogWriter.cs" />
     <Compile Include="..\Utils\Tracing.cs">
       <Link>Tracing.cs</Link>
