workitem 14934 - use real icons in the various dialogs, for Facebook, Flickr, Picasa, and TwitPic.

--- a/Cropper.Plugins/Facebook/Facebook.csproj
+++ b/Cropper.Plugins/Facebook/Facebook.csproj
@@ -108,6 +108,18 @@
     <Compile Include="FacebookOptionsForm.Designer.cs">
       <DependentUpon>FacebookOptionsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <SubType>Designer</SubType>
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
