--- a/Cropper.Plugins/TwitPic/TwitPic.csproj
+++ b/Cropper.Plugins/TwitPic/TwitPic.csproj
@@ -113,11 +113,21 @@
     <Compile Include="TwitPicOptionsForm.Designer.cs">
       <DependentUpon>TwitPicOptionsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="TwitPicOptionsForm.resx">
       <SubType>Designer</SubType>
       <DependentUpon>TwitPicOptionsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <SubType>Designer</SubType>
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
