--- a/Cropper.Plugins/TwitPic/makefile.flymake
+++ b/Cropper.Plugins/TwitPic/makefile.flymake
@@ -2,7 +2,7 @@
 _CSC=c:\.net3.5\csc.exe
 LIBSREF=/R:..\Dependencies\Cropper.Extensibility.dll
 
-CS_SOURCE=Plugin.cs TwitPicSettings.cs OAuth.cs TwitPicOptionsForm.Designer.cs TwitPicOptionsForm.cs Properties\AssemblyInfo.cs ..\SolutionInfo.cs ..\Utils\Tracing.cs
+CS_SOURCE=Plugin.cs TwitPicSettings.cs OAuth.cs TwitPicOptionsForm.Designer.cs TwitPicOptionsForm.cs Properties\AssemblyInfo.cs Properties\Resources.Designer.cs ..\SolutionInfo.cs ..\Utils\Tracing.cs
 
 
 check-syntax:
