workitem 6268 - make the capture sound optional on the AnimatedGif plugin.

--- a/Cropper.Plugins/AnimatedGif/Plugin/AnimatedGif.csproj
+++ b/Cropper.Plugins/AnimatedGif/Plugin/AnimatedGif.csproj
@@ -122,6 +122,12 @@
     <Compile Include="Plugin.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="OptionsForm.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="AnimatedGifSettings.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="Library\AnimatedGifEncoder.cs" />
     <Compile Include="Library\GifDecoder.cs" />
