update Imgur to use the Common DLL

--- a/Cropper.Plugins/Imgur/Imgur.csproj
+++ b/Cropper.Plugins/Imgur/Imgur.csproj
@@ -98,9 +98,6 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="ImgurLogWriter.cs" />
-    <Compile Include="..\Utils\Tracing.cs">
-      <Link>Tracing.cs</Link>
-    </Compile>
     <Compile Include="ImgurOptionsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -150,6 +147,12 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj">
+      <Project>{8cef0116-5212-4c1c-90b7-2fd884cffc73}</Project>
+      <Name>CropperPlugins Common DLL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
