--- a/Cropper.Plugins/ImageShack/ImageShack.csproj
+++ b/Cropper.Plugins/ImageShack/ImageShack.csproj
@@ -97,8 +97,11 @@
     <Compile Include="Plugin.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="..\Utils\Tracing.cs">
+    <Compile Include="..\Common\Tracing.cs">
       <Link>Tracing.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\IUpload.cs">
+      <Link>IUpload.cs</Link>
     </Compile>
     <Compile Include="ImageShackOptionsForm.cs">
       <SubType>Form</SubType>
