update the Email plugin to use the Common DLL

--- a/Cropper.Plugins/Email/Email.csproj
+++ b/Cropper.Plugins/Email/Email.csproj
@@ -131,15 +131,18 @@
     <Compile Include="SendToEmailFormat.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="..\Utils\Tracing.cs">
-      <Link>Tracing.cs</Link>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="EmailOptionsForm.resx">
       <DependentUpon>EmailOptionsForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj">
+      <Project>{8cef0116-5212-4c1c-90b7-2fd884cffc73}</Project>
+      <Name>CropperPlugins Common DLL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
